NOTICK - fix various issues causing the java app to fail. For example: java "-parameters" build arg is required in gradle build.